tests/source1/fail/runtime_typecheck8.js
1 || 2;
//error: "boo type mismatch"